# openmul-mod

./: Makefile.am  README  configure.ac  mul.sh
application/l2switch/: l2switch.c
application/memtrack/: Makefile.am  Makefile.in  memtrack.c  memtrack.h
common-libs/mul-lib/include/: mul_app_interface.h
